Basic structure changes
Signed-off-by: Yougeshwar Khatri <ykhatri@folio3.com>

--- a/MechanicsTool/src/resources/application.properties
+++ b/MechanicsTool/src/resources/application.properties
@@ -2,7 +2,7 @@
 jdbc.driver = com.mysql.jdbc.Driver
 jdbc.url = jdbc:mysql://localhost:3306/hibnatedb
 jdbc.username = root
-djdbc.password = Kasak_2005
+jdbc.password = Kasak_2005
 
 #Hibernate Configuration:
 hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
