New Changes, working now
Signed-off-by: Yougeshwar <Yougeshwar@YOUGESH>

--- a/MechanicsTool/src/application.properties
+++ b/MechanicsTool/src/application.properties
@@ -1,6 +1,6 @@
 #jdbc properties:
 jdbc.driver = com.mysql.jdbc.Driver
-jdbc.url = jdbc:mysql://localhost:3306/hibnatedb
+jdbc.url = jdbc:mysql://localhost:3306/mechanics_tool_v0
 jdbc.username = root
 jdbc.password = Kasak_2005
 
@@ -8,4 +8,3 @@ jdbc.password = Kasak_2005
 hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 hibernate.show_sql = true
 hibernate.format_sql = true
-#entitymanager.packages.to.scan = com.yog.mt.models
